@@ -39,6 +39,7 @@ plugins {
     id 'pmd'
     id 'project-report'
     id 'org.openjfx.javafxplugin' version '0.0.8'
+    id 'org.beryx.jlink' version '2.19.0'
 }
 
 apply from: "./config/gradle/jre.gradle"
@@ -95,8 +96,10 @@ dependencies {
     implementation group: 'com.atlassian.commonmark', name: 'commonmark', version: '0.14.0'
 
     implementation group: 'com.google.code.gson', name: 'gson', version: '2.8.5'
-    implementation group: "com.google.guava", name: "guava", version: "28.1-jre"
-    implementation group: 'ch.qos.logback', name: 'logback-classic', version: '1.3.0-alpha5'
+    implementation (group: "com.google.guava", name: "guava", version: "28.1-jre") {
+        exclude group: 'com.google.code.findbugs', module: 'jsr305'
+    }
+    implementation group: 'ch.qos.logback', name: 'logback-classic', version: '1.3.0-alpha4'
     implementation group: 'com.github.everit-org.json-schema', name: 'org.everit.json.schema', version: '1.12.1'
 
     implementation group: 'org.kohsuke', name: 'github-api', version: '1.111'
@@ -116,8 +119,11 @@ dependencies {
 }
 
 // Set the expected module Java level (can use a higher Java to run, but should not use features from a higher Java)
-sourceCompatibility = 1.11
-targetCompatibility = 1.11
+java {
+    sourceCompatibility = JavaVersion.VERSION_11
+    targetCompatibility = JavaVersion.VERSION_11
+    modularity.inferModulePath.set(true)
+}
 
 javafx {
     version = "11.0.2"
@@ -129,12 +135,17 @@ javafx {
 
 test {
     useJUnitPlatform()
+    jvmArgs("--add-exports", "org.junit.platform.commons/org.junit.platform.commons.util=ALL-UNNAMED")
+    jvmArgs("--add-exports", "org.junit.platform.commons/org.junit.platform.commons.logging=ALL-UNNAMED")
 }
 
 checkstyle {
     configFile = new File("$rootDir/config/metrics/checkstyle/checkstyle.xml")
     configProperties.samedir = checkstyle.configFile.parentFile
 }
+
+checkstyleMain.exclude "**/module-info.java"
+checkstyleTest.exclude "**/module-info.java"
 
 pmd {
     ignoreFailures = true
@@ -147,7 +158,11 @@ spotbugs {
     reportLevel = 'medium'
 }
 
-mainClassName = 'org.terasology.launcher.TerasologyLauncher'
+application {
+    mainModule = "org.terasology.launcher"
+    mainClass = "org.terasology.launcher.TerasologyLauncher"
+}
+
 
 def convertGitBranch = { gitBranch ->
     if (gitBranch != null) {
@@ -207,9 +222,6 @@ jar {
     exclude "logback.xml"
     rename('logback_jar.xml', 'logback.xml')
     manifest {
-        def manifestClasspath = configurations.runtimeClasspath.collect { it.getName() }.join(" ")
-        attributes("Main-Class": mainClassName)
-        attributes("Class-Path": manifestClasspath)
         attributes("Implementation-Title": project.name)
         attributes("Implementation-Version": project.version)
         attributes("SplashScreen-Image": splashImage)
